# EmailMCP

./: .env.example  .gitignore  AGENTS.md  README.md  go.mod  go.sum  main.go  main_test.go
.github/workflows/: build-macos.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/scripts/: prepare-sidecar.mjs
apps/desktop/src/: App.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
codexconfig/: codexconfig.go  codexconfig_test.go
config/: config.go  local_test.go
credentials/: credentials.go  credentials_darwin.go  credentials_unsupported.go  credentials_windows.go
doctor/: doctor.go  doctor_test.go
mailindex/: store.go  store_test.go
service/: attachments.go  attachments_test.go  index_sync.go  index_sync_test.go  mailbox_write.go  mailbox_write_test.go  organize.go  query_v2.go  receiver.go  receiver_test.go  search_all.go  sender.go
tools/: email_tools.go  email_tools_test.go
