[package]
name = "email-mcp-desktop"
version = "0.1.0"
description = "Local desktop configuration center for Email MCP"
authors = ["Email MCP"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "email_mcp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
